<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tracker TK303G</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="operation_commands">Operation Commands</string>
    <string name="alarm_commands">Alarm Commands</string>
    <string name="advanced_configs">Advanced Configs</string>
    <string name="requisition_resolver_info_title">Coban Tracker TK303G Info</string>
    <string name="fragment_info_info_title">Info</string>
    <string name="notification_default_text">Click here for more details</string>
    <string name="fragment_info_server_log_history">Server Log</string>
    <string name="activity_main_drawer_user_manual">User Manual</string>
    <string name="fragment_server_log_clear_log">Clear</string>
    <string name="log_info">Log Info</string>
    <string name="lock_vehicle">Lock Vehicle</string>
    <string name="unlock_vehicle">Unlock Vehicle</string>
    <string name="get_location">Get Location</string>
    <string name="obtain_firmware_version">Obtain Firmware Version</string>
    <string name="gps_restart">GPS Restart</string>
    <string name="tracker_restart">Tracker Restart</string>
    <string name="get_tracker_info">Get Tracker Info</string>
    <string name="set_tracker_language">Set Tracker Language</string>
    <string name="configure_apn">Configure APN</string>
    <string name="perform_factory_reset">Perform Factory Reset</string>
    <string name="configure_ip">Configure IP</string>
    <string name="product_registration">Product Registration</string>
    <string name="pair_number">Pair Number</string>
    <string name="delete_number">Delete Number</string>
    <string name="delete_all_paired_numbers">Delete All Paired Numbers</string>
    <string name="view_paired_numbers">View Paired Numbers</string>
    <string name="change_tracker_password">Change Tracker Password</string>
    <string name="set_virtual_fence">Set Virtual Fence</string>
    <string name="clear_virtual_fence">Clear Virtual Fence</string>
    <string name="set_over_speed_alarm">Set Over Speed Alarm</string>
    <string name="tracker_number">Tracker Number</string>
    <string name="msg_configure_tracker_number">Please configure your tracker number!</string>
    <string name="msg_configure_password">Please configure your password!</string>
    <string name="message_confirmation">Command \'%1$s\' has sent successfully!</string>
    <string name="message_command_confirmation">Command \'%1$s\' has sent successfully!\n%2$s</string>
    <string name="command">Command</string>
    <string name="user_manual">User Manual</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="info">Info</string>
    <string name="number">Number</string>
    <string name="okay">Okay</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="old_password">Old (6 digit)</string>
    <string name="new_password">New (6 digit)</string>
    <string name="over_speed_range"><![CDATA[0 < N < 1000]]></string>
    <string name="operator">Operator</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="car_station_id">Car Station ID</string>
    <string name="main_config_commands">Main Config Commands</string>
    <string name="authorize_number">Authorize Number</string>
    <string name="remove_number">Remove Number</string>
    <string name="config_commands">Config Commands</string>
    <string name="basic_operations">Basic Operations</string>
    <string name="please_add_call_permission">Please add call permission!</string>
    <string name="lat">Lat:</string>
    <string name="lng">Lng:</string>
    <string name="speed">Speed:</string>
    <string name="time">Time:</string>
    <string name="speed_kmh">"%1$s Km/h"</string>
    <string name="title_activity_location_history">Location History</string>
    <string name="location_history">Location History</string>
    <string name="marker_detail">"Time: %1$s - Speed: %2$s Km/h"</string>
    <string name="pages">Pages</string>
    <string name="view">View</string>
    <string name="advanced_config_commands">Advanced Config Commands</string>
    <string name="factory_reset_begin">Factory Reset (Begin)</string>
    <string name="monitor">Change to Monitor</string>
    <string name="tracker">Change to Tracker</string>
    <string name="config_parameters">Config Parameters</string>
    <string name="tracker_mode">Tracker Mode</string>
    <string name="check_status">Check Status</string>
    <string name="adjust_timezone">Adjust TimeZone</string>
    <string name="time_zone">Time Zone</string>
    <string name="restart_tracker">Restart Tracker</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apn_config_commands">APN Config Commands</string>
    <string name="set_apn">Set APN</string>
    <string name="set_apn_user_pass">Set APN User/Pass</string>
    <string name="apn_name">APN Name</string>
    <string name="user">APN User</string>
    <string name="pass">APN Pass</string>
    <string name="set_ip_and_port">Set IP and Port</string>
    <string name="acc_alarm">ACC Alarm</string>
    <string name="activate_acc_alarm">Activate ACC Alarm</string>
    <string name="cancel_acc_alarm">Cancel Acc Alarm</string>
    <string name="overspeed_alarm">Overspeed Alarm</string>
    <string name="activate_overspeed_alarm">Activate Overspeed Alarm</string>
    <string name="cancel_overspeed_alarm">Cancel Overspeed Alarm</string>
    <string name="low_battery_alarm">Low Battery Alarm</string>
    <string name="activate_low_battery_alarm">Activate Low Battery Alarm</string>
    <string name="cancel_low_battery_alarm">Cancel Low Battery Alarm</string>
    <string name="ext_power_alarm">External Power Alarm</string>
    <string name="activate_ext_power_alarm">Activate Ext Power Alarm</string>
    <string name="cancel_ext_power_alarm">Cancel Ext Power Alarm</string>
    <string name="gps_signal_alert">GPS Signal Alert</string>
    <string name="activate_gps_signal_alert">Activate Gps Signal Alert</string>
    <string name="cancel_gps_signal_alert">Cancel Gps Signal Alert</string>
    <string name="move_alarm">Move Alarm</string>
    <string name="activate_move_alarm">Activate Move Alarm</string>
    <string name="cancel_move_alarm">Cancel Move Alarm</string>
    <string name="speed3Digits">Speed (3 digits)</string>
    <string name="meters4Digits">Meters (4 digits)</string>
    <string name="verify_imei">Verify IMEI</string>
    <string name="continuous_track">Continuous Track</string>
    <string name="gprs_sms_mode">GPRS / SMS Mode</string>
    <string name="change_to_gprs">Change to GPRS</string>
    <string name="change_to_sms">Change to SMS</string>
    <string name="auto_track">Auto Track</string>
    <string name="activate_auto_track">Activate Auto Track</string>
    <string name="cancel_auto_track">Cancel Auto Track</string>
    <string name="interval_minutes">Interval (ex: 020s or 005m)</string>
    <string name="times_3_digits">Times (3 digits, *** infinity)</string>
    <string name="power">Power:</string>
    <string name="door">Door:</string>
    <string name="acc">Acc:</string>
    <string name="alarm">Alarm</string>
    <string name="acc_on_alarm_title">ACC On Alarm</string>
    <string name="acc_off_alarm_title">ACC Off Alarm</string>
    <string name="move_alarm_title">Move Alarm</string>
    <string name="speed_alarm_title">Speed Alarm</string>
    <string name="last_location_title">Last Location</string>
</resources>
