<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConfigsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/main_config_commands"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/btnChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_tracker_password"
                    style="@style/Widget.AppCompat.Button.Colored" />

                <Button
                    android:id="@+id/btnAuthorize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorize_number"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/btnRemoveAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_number"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/apn_config_commands"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/btnSetApnName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_apn"
                    style="@style/Widget.AppCompat.Button.Colored" />

                <Button
                    android:id="@+id/btnSetApnUserPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_apn_user_pass"
                    style="@style/Widget.AppCompat.Button.Colored" />

                <Button
                    android:id="@+id/btnSetIpAndPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_ip_and_port"
                    style="@style/Widget.AppCompat.Button.Colored" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/advanced_config_commands"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/btnTimeZone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adjust_timezone"
                    style="@style/Widget.AppCompat.Button.Colored" />

                <Button
                    android:id="@+id/btnRestart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/restart_tracker"
                    style="@style/Widget.AppCompat.Button.Colored" />

                <Button
                    android:id="@+id/btnBegin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/factory_reset_begin"
                    style="@style/Widget.AppCompat.Button.Colored" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
