<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AlarmOperationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_vertical_margin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/acc_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/btnActivateAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activate_acc_alarm"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/btnCancelAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_acc_alarm"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/low_battery_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/btnActivateLowBattery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activate_low_battery_alarm"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/btnCancelLowBattery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_low_battery_alarm"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/ext_power_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/btnActivateExtPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activate_ext_power_alarm"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/btnCancelExtPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_ext_power_alarm"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/gps_signal_alert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/btnActivateGpsSignalAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activate_gps_signal_alert"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/btnCancelGpsSignalAlert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_gps_signal_alert"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/move_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/btnActivateMove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activate_move_alarm"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/btnCancelMove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_move_alarm"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/overspeed_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <Button
                    android:id="@+id/btnActivateOverSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activate_overspeed_alarm"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:id="@+id/btnCancelOverSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_overspeed_alarm"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>
