<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConfigurationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:text="@string/tracker_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title_tracker_number"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/text_tracker_number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/btn_set_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_tracker_language" />

                <Button
                    android:id="@+id/btn_factory_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perform_factory_reset" />

                <Button
                    android:id="@+id/btn_set_apn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/configure_apn" />

                <Button
                    android:id="@+id/btn_set_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/configure_ip" />

                <Button
                    android:id="@+id/btn_product_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_registration" />

                <Button
                    android:id="@+id/btn_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/btn_pair_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pair_number" />

                <Button
                    android:id="@+id/btn_delete_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_number" />

                <Button
                    android:id="@+id/btn_delete_all_numbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_all_paired_numbers" />

                <Button
                    android:id="@+id/btn_view_paired_numbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_paired_numbers" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

<!--                <Button
                    android:id="@+id/btn_set_virtual_fence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_virtual_fence" />

                <Button
                    android:id="@+id/btn_clear_virtual_fence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_virtual_fence" />-->

                <Button
                    android:id="@+id/btn_set_over_speed_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_over_speed_alarm" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
